--- a/inicial-funcionario/index.html
+++ b/inicial-funcionario/index.html
@@ -34,11 +34,30 @@
         </div>
               <div class="informacoes">
                 <div class="part1">
-                    <div class="solicitacoes">
+                  <div class="caixa">
                     <img class="img1" src="./img/img1.png" alt="">
-                    <h1>Solicitações</h1>
+                    <div class="textinhos">
+                    <h1 class="info-texto">Solicitações</h1>
+                    <h1 class="info-subtexto">Solicitar férias, folgas, etc</h1>
+                    </div>
+                    </div>
+                    <div class="caixa">
+                      <img class="img1" src="./img/img2.png" alt="">
+                      <div class="textinhos">
+                      <h1 class="info-texto">Solicitações</h1>
+                      <h1 class="info-subtexto">Solicitar férias, folgas, etc</h1>
                     </div>
                </div>
+               <div class="caixa">
+                <img class="img3" src="./img/img3.png" alt="">
+                <div class="textinhos">
+                <h1 class="info-texto">Solicitações</h1>
+                <h1 class="info-subtexto">Solicitar férias, folgas, etc</h1>
+              </div>
+            </div>
+            <div class="caixa">
+              <img class="img4" src="./img/img1.png" alt="">
+              
             </div>
       </div>
 </body>
