--- a/inicial-funcionario/index.html
+++ b/inicial-funcionario/index.html
@@ -34,31 +34,44 @@
         </div>
               <div class="informacoes">
                 <div class="part1">
-                  <div class="caixa">
+                  <div class="caixa1">
                     <img class="img1" src="./img/img1.png" alt="">
                     <div class="textinhos">
-                    <h1 class="info-texto">Solicitações</h1>
-                    <h1 class="info-subtexto">Solicitar férias, folgas, etc</h1>
+                    <a class="info-texto" href="">Solicitações</a>
+                    <a class="info-subtexto" href="">Solicitar férias, folgas, etc</a>
                     </div>
                     </div>
-                    <div class="caixa">
-                      <img class="img1" src="./img/img2.png" alt="">
+                    <div class="caixa1">
+                      <img class="img2" src="./img/img2.png" alt="">
                       <div class="textinhos">
-                      <h1 class="info-texto">Solicitações</h1>
-                      <h1 class="info-subtexto">Solicitar férias, folgas, etc</h1>
+                      <a class="info-texto2" href="">Cursos</a>
+                      <a class="info-subtexto2" href="">Desempenho nos cursos</a>
                     </div>
                </div>
-               <div class="caixa">
+               <div class="caixa1">
                 <img class="img3" src="./img/img3.png" alt="">
                 <div class="textinhos">
-                <h1 class="info-texto">Solicitações</h1>
-                <h1 class="info-subtexto">Solicitar férias, folgas, etc</h1>
+                  <a class="info-texto3" href="">Justificativa</a>
+                <a class="info-subtexto3" href="">Justifique atrasos, faltas, etc</a>
               </div>
             </div>
-            <div class="caixa">
-              <img class="img4" src="./img/img1.png" alt="">
-              
+            <div class="caixa4">
+              <button>+</button>
             </div>
+  </div>
+  <div class="part2">
+    <div class="caixa2">
+      <h1 class="info-texto4">Check-in / Check-out</h1>
+      <div class="entrada">
+        <h1 class="Check-in">Dia e Horário de entrada</h1>
+        <div class="linha">
+        <label>Data:</label>
+        <input class="data-entrada "type="date">
+        <label class="hora">Hora:</label>
+        <input class="hora-entrada "type="time">
+      </div>
+      </div>
+      </div>
       </div>
 </body>
-</html>
+</html>!!
