--- a/FUNCIONARIO/inicial-funcionario/index.html
+++ b/FUNCIONARIO/inicial-funcionario/index.html
@@ -56,7 +56,9 @@
               </div>
             </div>
             <div class="caixa4">
-              <button>+</button>
+              <button>
+                <h1 class="mais">+</h1>
+              </button>
             </div>
   </div>
   <div class="part2">
@@ -69,9 +71,27 @@
         <input class="data-entrada "type="date">
         <label class="hora">Hora:</label>
         <input class="hora-entrada "type="time">
+        <button class="botao-salvar">
+          <h1 class="titulo-salvar">salvar</h1>
+        </button>
       </div>
       </div>
+      <div class="entrada">
+        <h1 class="Check-in">Dia e Horário de saída</h1>
+        <div class="linha1">
+        <label>Data:</label>
+        <input class="data-entrada "type="date">
+        <label class="hora">Hora:</label>
+        <input class="hora-entrada "type="time">
+        <button class="botao-salvar">
+          <h1 class="titulo-salvar">salvar</h1>
+        </button>
+      </div>
+      </div>
+      </div>
+      <div class="caixa5">
+        <h1 class="info-texto5">Desempenho Profissional em %</h1>
       </div>
       </div>
 </body>
-</html>!!
+</html>
