--- a/FUNCIONARIO/inicial-funcionario/index.html
+++ b/FUNCIONARIO/inicial-funcionario/index.html
@@ -15,6 +15,7 @@
     </div>
     </div>
     <div class="tudo">
+      <div class="tudo1">
         <div class="sidebar">
             <div class="icon-circle">
                 <img src="img/home.png" alt="Home icon">
@@ -32,6 +33,10 @@
                 <span class="icon phone"></span>
               </a>
         </div>
+        <div class="perfil">
+          <a class="person"href=""></a>
+        </div>
+      </div>
               <div class="informacoes">
                 <div class="part1">
                   <div class="caixa1">
@@ -57,7 +62,7 @@
             </div>
             <div class="caixa4">
               <button>
-                <h1 class="mais">+</h1>
+                <img class="mais" src="./img/mais.png" alt="">
               </button>
             </div>
   </div>
@@ -93,5 +98,16 @@
         <h1 class="info-texto5">Desempenho Profissional em %</h1>
       </div>
       </div>
+      <div class="part3">
+      <div class="caixa6">
+        <h1 class="info-texto6">Cursos</h1>
+      </div>
+      <div class="caixa6">
+        <h1 class="info-texto6">Cursos</h1>
+      </div>
+      <div class="caixa6">
+        <h1 class="info-texto6">Cursos</h1>
+      </div>
+    </div>
 </body>
 </html>
